modified:   index.html 	modified:   javascript/javascript.js 	modified:   style/style.css

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
             <h3>Hello,It's Me</h3>
             <h1>Fardeen</h1>
             <h3>And I'm a <span>Web Developer</span></h3>
-            <p>A budding enthusiastic Web Developer,passionate about Javascript Development. Basic understanding in Full Stack
-                Development and Considerable talent in achieving critical solutions   </p>
+            <p>A budding enthusiastic Web Developer, passionate about Javascript Development. Basic understanding in Full Stack
+                Development and Considerable talent in achieving critical solutions</p>
       
         <div class="social-media">
-            <a href=""><i class='bx bxl-facebook'></i></a>
+            <a href="https://github.com/FiddiCode"><i class='bx bxl-github'></i></i></a>
             <a href=""><i class='bx bxl-twitter' ></i></a>
             <a href=""><i class='bx bxl-instagram-alt' ></i></a>
-            <a href=""><i class='bx bxl-linkedin' ></i></a>
+            <a href="https://www.linkedin.com/in/fiddicode"><i class='bx bxl-linkedin' ></i></a>
         </div>
-        <a href="#" class="btn">Download CV</a>
+        <a href="/images/Fardeen_Resume_1.pdf" download class="btn">Download CV</a>
     </div>
     <div class="home-img">
         <img src="images/2.png">
@@ -70,14 +70,14 @@
 
                 <div class="service-box">
                     <i class='bx bxs-paint'></i>
-                    <h3>Graphic Design</h3>
+                    <h3>Web Design</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil mollitia officiis necessitatibus quas eaque nostrum nesciunt repudiandae voluptate et earum optio non aut atque obcaecati modi laborum voluptatem, sint eveniet.</p>
                     <a href="#" class="btn">Read More</a>
                 </div>
 
                 <div class="service-box">
                     <i class='bx bx-bar-chart-alt'></i>
-                    <h3>Digital Marketing</h3>
+                    <h3>Software Development</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae, distinctio! Nemo numquam laudantium dolore voluptate possimus eum est impedit quaerat reiciendis cupiditate molestias, at consequatur blanditiis dicta ad, accusantium itaque?</p>
                     <a href="#" class="btn">Read More</a>
                 </div>
@@ -88,59 +88,59 @@
             <h2 class="heading"> Latest<span>Project</span></h2>
             <div class="portfolio-container">
                 <div class="portfolio-box">
-                    <img src="images/autohotkey-programmers-code-programming-wallpaper.jpg" alt="image is missing" >
+                    <img src="/images/adminPanel.png" alt="image is missing" >
                     <div class="portfolio-layer">
-                        <h4>Web Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel nam itaque saepe, est eligendi</p>
-                        <a href="#"><i class="bx bx-link-external"></i></a>
+                        <h4>Admin Panel</h4>
+                        <p>Admin Panel which shows data and allow to perform Operations</p>
+                        <a href="https://fidadmin-62xyc1vdf-fiddicode.vercel.app/home"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
 
                 <div class="portfolio-box">
-                    <img src="images/OIP (1).jpeg" alt="image is missing" >
+                    <img src="/images/Youtube.jpg" alt="image is missing" >
                     <div class="portfolio-layer">
-                        <h4>Web Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel nam itaque saepe,esteligendi</p>
-                        <a href="#"><i class="bx bx-link-external"></i></a>
-                    </div>
-                </div>
-
-
-                <div class="portfolio-box">
-                    <img src="images/OIP (2).jpeg" alt="image is missing" >
-                    <div class="portfolio-layer">
-                        <h4>Web Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel nam itaque saepe, est eligendi</p>
-                        <a href="#"><i class="bx bx-link-external"></i></a>
+                        <h4>Youtube</h4>
+                        <p>Fully functional and responsive Youtube Clone</p>
+                        <a href="https://fidtube-youtube-clone-by-fardeen.netlify.app/"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
 
 
                 <div class="portfolio-box">
-                    <img src="images/OIP.jpeg" alt="image is missing" >
+                    <img src="/images/Movie.jpg" alt="image is missing" >
                     <div class="portfolio-layer">
-                        <h4>Web Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel nam itaque saepe, est eligendi</p>
-                        <a href="#"><i class="bx bx-link-external"></i></a>
+                        <h4>Movie</h4>
+                        <p>This is multi page movies detail website</p>
+                        <a href="https://fiddicode.github.io/Movie-Catalogue--v2.0/"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
 
 
                 <div class="portfolio-box">
-                    <img src="images/autohotkey-programmers-code-programming-wallpaper.jpg" alt="image is missing" >
+                    <img src="/images/netflix.png" alt="image is missing" >
                     <div class="portfolio-layer">
-                        <h4>Web Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel nam itaque saepe, est elig</p>
+                        <h4>FidShow</h4>
+                        <p>Contains Login and register Page and Users can see any movie/series</p>
                         <a href="#"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
 
 
                 <div class="portfolio-box">
-                    <img src="images/OIP (2).jpeg" alt="image is missing" >
+                    <img src="/images/vivaah.png" alt="image is missing" >
                     <div class="portfolio-layer">
-                        <h4>Web Design</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel nam itaque saepe, est eligendi</p>
+                        <h4>Vivaah</h4>
+                        <p>Matrimonial Site</p>
+                        <a href="https://fiddicode.github.io/Vidtube/"><i class="bx bx-link-external"></i></a>
+                    </div>
+                </div>
+
+
+                <div class="portfolio-box">
+                    <img src="images/vidtube.png" alt="image is missing" >
+                    <div class="portfolio-layer">
+                        <h4>Vidtube</h4>
+                        <p>Youtube Clone made by custom code</p>
                         <a href="#"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
@@ -178,5 +178,6 @@
             </div>
 
         </footer>
+        <script src="/javascript/javascript.js"></script>
 </body>
 </html>
