new file:   images/fardeen.jpg 	new file:   images/fardeen.png 	modified:   index.html 	modified:   javascript/javascript.js 	modified:   style/style.css

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <a href="/images/Fardeen_Resume_1.pdf" download class="btn">Download CV</a>
     </div>
     <div class="home-img">
-        <img src="images/2.png">
+        <img src="images/fardeen.png">
         </section>
     
         <!-----------about secton design------->
         <section class="about" id="about">
             <div class="about-image">
-                <img src="images/2.png" alt="image is missing" >
+                <img src="images/fardeen.jpg" alt="image is missing" >
             </div>
             <div class="about-content">
                 <h2 class="heading">About<span>Me</span></h2>
@@ -178,6 +178,12 @@
             </div>
 
         </footer>
+
+
+
+        <script src="https://unpkg.com/scrollreveal"></script>
+
+        <!-- =================Custom Js==================== -->
         <script src="/javascript/javascript.js"></script>
 </body>
 </html>
