--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="/images/Fardeen_Resume_1.pdf" download class="btn">Download CV</a>
     </div>
     <div class="home-img">
-        <img src="images/fardeen.png">
+        <img src="images/fardeen (3).png">
         </section>
     
         <!-----------about secton design------->
