renamed:    images/Fardeen_Resume_1.pdf -> images/Fardeen_Resume.pdf 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href=""><i class='bx bxl-instagram-alt' ></i></a>
             <a href="https://www.linkedin.com/in/fiddicode"><i class='bx bxl-linkedin' ></i></a>
         </div>
-        <a href="/images/Fardeen_Resume_1.pdf" download class="btn">Download CV</a>
+        <a href="images/Fardeen_Resume.pdf" download class="btn">Download CV</a>
     </div>
     <div class="home-img">
         <img src="images/fardeen (3).png">
@@ -88,7 +88,7 @@
             <h2 class="heading"> Latest<span>Project</span></h2>
             <div class="portfolio-container">
                 <div class="portfolio-box">
-                    <img src="/images/adminPanel.png" alt="image is missing" >
+                    <img src="images/adminPanel.png" alt="image is missing" >
                     <div class="portfolio-layer">
                         <h4>Admin Panel</h4>
                         <p>Admin Panel which shows data and allow to perform Operations</p>
@@ -97,7 +97,7 @@
                 </div>
 
                 <div class="portfolio-box">
-                    <img src="/images/Youtube.jpg" alt="image is missing" >
+                    <img src="images/Youtube.jpg" alt="image is missing" >
                     <div class="portfolio-layer">
                         <h4>Youtube</h4>
                         <p>Fully functional and responsive Youtube Clone</p>
@@ -107,7 +107,7 @@
 
 
                 <div class="portfolio-box">
-                    <img src="/images/Movie.jpg" alt="image is missing" >
+                    <img src="images/Movie.jpg" alt="image is missing" >
                     <div class="portfolio-layer">
                         <h4>Movie</h4>
                         <p>This is multi page movies detail website</p>
@@ -117,7 +117,7 @@
 
 
                 <div class="portfolio-box">
-                    <img src="/images/netflix.png" alt="image is missing" >
+                    <img src="images/netflix.png" alt="image is missing" >
                     <div class="portfolio-layer">
                         <h4>FidShow</h4>
                         <p>Contains Login and register Page and Users can see any movie/series</p>
@@ -127,7 +127,7 @@
 
 
                 <div class="portfolio-box">
-                    <img src="/images/vivaah.png" alt="image is missing" >
+                    <img src="images/vivaah.png" alt="image is missing" >
                     <div class="portfolio-layer">
                         <h4>Vivaah</h4>
                         <p>Matrimonial Site</p>
