Changes to be committed:

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="portfolio-layer">
                         <h4>FidShow</h4>
                         <p>Contains Login and register Page and Users can see any movie/series</p>
-                        <a href="#"><i class="bx bx-link-external"></i></a>
+                        <a href="https://github.com/FiddiCode/Netflix-Clone.git"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
 
@@ -137,11 +137,11 @@
 
 
                 <div class="portfolio-box">
-                    <img src="images/vidtube.png" alt="image is missing" >
+                    <img src="images/fidShare.png" alt="image is missing" >
                     <div class="portfolio-layer">
-                        <h4>Vidtube</h4>
-                        <p>Youtube Clone made by custom code</p>
-                        <a href="https://fiddicode.github.io/Vidtube/"><i class="bx bx-link-external"></i></a>
+                        <h4>FidShare</h4>
+                        <p>File Sharing App</p>
+                        <a href="https://github.com/FiddiCode/File-Sharing-App.git"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
 
