Changes to be committed:

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <h3>Hello,It's Me</h3>
             <h1>Fardeen</h1>
             <h3>And I'm a <span>Web Developer</span></h3>
-            <p>A budding enthusiastic Web Developer, passionate about Javascript Development. Basic understanding in Full Stack
-                Development and Considerable talent in achieving critical solutions</p>
+            <p>A budding enthusiastic Web Developer, passionate about Javascript Development.
+                 Basic understanding in Full Stack Development and Considerable talent in achieving critical solutions</p>
       
         <div class="social-media">
             <a href="https://github.com/FiddiCode"><i class='bx bxl-github'></i></i></a>
@@ -48,8 +48,8 @@
             </div>
             <div class="about-content">
                 <h2 class="heading">About<span>Me</span></h2>
-                <h3> As a Developer</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum iure, voluptates commodi recusandae, quos illo dolor voluptatem, ratione consequatur quam incidunt assumenda numquam. Odio excepturi exercitationem totam corporis maxime cupiditate.  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum laboriosam atque, repudiandae inventore, odio quaerat quos amet cum officia quia dolores quisquam, alias exercitationem odit asperiores saepe iure similique a.</p>
+                <h3> As a Developer,</h3>
+                <p>I have hands-on experience with the latest technologies and frameworks, enabling me to create robust and efficient applications. My proficiency in HTML, CSS,JavaScript and Reactjs allows me to craft engaging and responsive user interfaces, while my expertise in MongoDB, Express.js and Node.js ensures seamless backend functionality. I am adept at collaborating with cross-functional teams to deliver high-quality software solutions that meet user needs and business objectives.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
@@ -64,21 +64,21 @@
                 <div class="service-box">
                     <i class='bx bx-code-alt'></i>
                     <h3>Web Development</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae, distinctio! Nemo numquam laudantium dolore voluptate possimus eum est impedit quaerat reiciendis cupiditate molestias, at consequatur blanditiis dicta ad, accusantium itaque?</p>
+                    <p>I range from simple static websites to complex web applications, e-commerce platforms, social networks, and more. With a combination of technical skills, creativity, and an understanding of user experience to create effective and engaging online experiences.</p>
                     <a href="#" class="btn">Read More</a>
                 </div>
 
                 <div class="service-box">
                     <i class='bx bxs-paint'></i>
-                    <h3>Web Design</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil mollitia officiis necessitatibus quas eaque nostrum nesciunt repudiandae voluptate et earum optio non aut atque obcaecati modi laborum voluptatem, sint eveniet.</p>
+                    <h3>Graphic Design</h3>
+                    <p>I am employed in various jobs such as advertising, marketing, publishing, web design, and branding agencies. I can do work like creating marketing materials, brand identities, user interfaces, and engaging visual content across both print and digital media.</p>
                     <a href="#" class="btn">Read More</a>
                 </div>
 
                 <div class="service-box">
                     <i class='bx bx-bar-chart-alt'></i>
                     <h3>Software Development</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae, distinctio! Nemo numquam laudantium dolore voluptate possimus eum est impedit quaerat reiciendis cupiditate molestias, at consequatur blanditiis dicta ad, accusantium itaque?</p>
+                    <p>I can manage the process like designing, creating, testing, and maintaining computer programs and applications. I continuously learn and adapt to new technologies and programming languages to stay current in this ever-evolving field.</p>
                     <a href="#" class="btn">Read More</a>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                 <div class="portfolio-box">
                     <img src="images/adminPanel.png" alt="image is missing" >
                     <div class="portfolio-layer">
-                        <h4>Admin Panel</h4>
+                        <h4>FidAdmin</h4>
                         <p>Admin Panel which shows data and allow to perform Operations</p>
                         <a href="https://fidadmin-62xyc1vdf-fiddicode.vercel.app/home"><i class="bx bx-link-external"></i></a>
                     </div>
@@ -99,8 +99,8 @@
                 <div class="portfolio-box">
                     <img src="images/Youtube.jpg" alt="image is missing" >
                     <div class="portfolio-layer">
-                        <h4>Youtube</h4>
-                        <p>Fully functional and responsive Youtube Clone</p>
+                        <h4>Fidtube</h4>
+                        <p>Fully functional Youtube Clone</p>
                         <a href="https://fidtube-youtube-clone-by-fardeen.netlify.app/"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                     <img src="images/Movie.jpg" alt="image is missing" >
                     <div class="portfolio-layer">
                         <h4>Movie</h4>
-                        <p>This is multi page movies detail website</p>
+                        <p>Movies detail website</p>
                         <a href="https://fiddicode.github.io/Movie-Catalogue--v2.0/"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                     <img src="images/netflix.png" alt="image is missing" >
                     <div class="portfolio-layer">
                         <h4>FidShow</h4>
-                        <p>Contains Login and register Page and Users can see any movie/series</p>
+                        <p>Netflix-Clone with backend</p>
                         <a href="https://github.com/FiddiCode/Netflix-Clone.git"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
