--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="portfolio-layer">
                         <h4>FidShare</h4>
                         <p>File Sharing App</p>
-                        <a href="https://github.com/FiddiCode/File-Sharing-App.git"><i class="bx bx-link-external"></i></a>
+                        <a href="https://file-sharing-app-blush.vercel.app/"><i class="bx bx-link-external"></i></a>
                     </div>
                 </div>
 
