--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <input type="email" placeholder="Email Address">
                 </div>
                 <div class="input-box">
-                    <input type="number" placeholder="Mobile Number">
+                    <input type="text" placeholder="Mobile Number">
                     <input type="text" placeholder="Email Subject">
                 </div>
                 <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
