--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="images/Fardeen_Resume.pdf" download class="btn">Download CV</a>
     </div>
     <div class="home-img">
-        <img src="images/fardeen (3).png">
+        <img style="object-fit: cover;" src="images/self.jpeg">
         </section>
     
         <!-----------about secton design------->
